# pyne-case

./: .gitignore  CLAUDE.md  FEATURES.md  README.md  agent.py  app.py  db.py  main.py  mcp_client.py  mcp_server.py  pyproject.toml  run.py  settings.py  system_prompt.md
AI_Engineering_case/: AI Engineer Case - Pyne.docx  jaffle_shop.duckdb.wal
AI_Engineering_case/__MACOSX/: ._AI Engineer Case - Pyne.docx
eval/: test_queries.py
tests/: test_eval.py
